# Lo-SgargaBot

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
config/: config.json
logs/: sgargabot.log.2021-02-04  sgargabot.log.2021-02-05  sgargabot.log.2021-02-06  sgargabot.log.2021-02-07
sgargabot/: main.py  test.py
sgargabot/cogs/economy/: main.py  models.py
sgargabot/cogs/gambling/: main.py  models.py
sgargabot/cogs/testing/: main.py
sgargabot/core/: cogloader.py  decorators.py  economy.py  sgargabot.py
sgargabot/models/: db.py  enums.py  exceptions.py
sgargabot/utils/: abc.py  config.py  logging.py
