[tool.poetry]
name = "sgargabot"
version = "0.1.0"
description = "A Discord Bot adding various admin functionalities, games, economy and fun utilities"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"
python-decouple = "^3.4"
mongoengine = "^0.22.1"

[tool.poetry.dev-dependencies]
setuptools = "^53.0.0"
wheel = "^0.36.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
