[tool.poetry]
name = "sgargabot"
version = "0.1.0"
description = "A Discord Bot adding various admin functionalities, games, economy and fun utilities"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"
python-decouple = "^3.4"
mongoengine = "^0.22.1"
bandit = "^1.7.0"
async-cron = "^1.6.2"

[tool.poetry.dev-dependencies]
setuptools = "^53.0.0"
wheel = "^0.36.2"
black = "^20.8b1"
mypy = "^0.800"
bandit = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
